styles.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;500&display=swap');

:root{
    --pale-dark-blue: #4C6C9C; 
    --dark-blue: #12317E; 
    --small-font: 14px;
    --large-font: 18px; 
}
html{
    min-height: 100%;
    text-align: center;
    font-family: Raleway, sans-serif;
    font-weight: lighter;
    font-size: var(--large-font);
    color: var(--pale-dark-blue);
}
body{
    background-image: url('./assets/landscape_bg.jpg');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    display: flex;
    flex-flow: nowrap column;
    min-height: 100vh;
    margin: 0;
    box-sizing: border-box;
}

body>div{
    padding: 16px;
    flex-grow: 1;
    display: flex;
    justify-content: center;
    background-color: rgba(82, 197, 255, 0.4);
}

.flex{
    display: flex;
    align-items: center;
    flex-flow: nowrap column;
}
.flex-center{
    display: flex;
    align-items: center;
    justify-content: center;
}

a{
    color: var(--pale-dark-blue);
}

.flexbox-center{
    display: flex;
    margin: auto;
    justify-content: center;
    flex-wrap: wrap;
    min-height: 80vh;
    max-width: 80%;
    min-width: fit-content;
    align-items: stretch;
}

#left_container{
    background-color: rgba(255, 255, 255, 0.5);
    display: flex;
    flex-flow: column nowrap;
    justify-content: space-around;
    text-align: center;
    flex-grow: 1;
    padding: 36px;
    width: 30%;
    border-radius: 5px  0 0 5px;
}
img{
    max-width: 80px; /* MR */
}
p{
    color: var(--pale-dark-blue);
    font-family: Raleway , sans-serif;
    word-wrap: normal;
    font-size: var(--small-font);
}

#login_container{
    background-color: white;
    display: flex;
    padding: 16px;
    flex-grow: 5;
    justify-content: center;
    border-radius: 0 5px 5px 0;
}
#sign-up-form, #login-form{
    box-sizing: border-box;
    display: flex;
    justify-content: space-evenly;
    padding: 16px;
}

fieldset{
    display: flex;
    flex-flow: wrap row;
    border: none;
    padding: 0%;
    margin: 8px;
    width: 100%;
    appearance: none;
    justify-content: space-evenly;
    flex: 1 1 0;
}
fieldset>div{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: nowrap column;
    font-size: var(--small-font);
}
button{
    background-color: var(--dark-blue);
    color: white;
    padding: 8px 16px;
    border: none;
    border-radius: 5px;
    margin-top: 24px;
    margin-bottom: 24px;
}

input{
    border-radius: 10px;
    border: solid var(--pale-dark-blue) 1px;
    padding: 3px;
    padding-left: 10px;
}
input:focus, input:valid{
    outline-color: var(--dark-blue);
}
input:invalid, input.invalid{
    outline-color: red;
    border-color: red;
}

footer{
    background-color: #12317E;
    margin-top: auto;
}
footer>p{
    text-align: center;
    color: white;
}
/* Error text for form */
.password_container>p{
    color: red;
}

/* Login Page Styling */

#login-form{
    flex-grow: 0.3;
}

/* Dashboard Page Styling */
#dashboard-body{
    background-image: none;
}
#dashboard-container{
    flex-flow: column wrap;
    justify-content: start;
    padding: 0px;
}
.banner{
    flex-grow: 1;
    width: 100%;
    min-height: 20vh;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    margin-bottom: -36px;
    background-image: url('./assets/Landscape-misty.jpg');
    filter: contrast(1.3) saturate(2) hue-rotate(10deg);
}
.banner2{
    background-image:url('./assets/Landscape-orange.jpg') ;
    filter: none;
    background-position: top;
}
.dashboard-content{
    filter: saturate(1);
    justify-content: space-between;
    display: flex;
    width: 100%;
    flex-grow: 3;
    border-radius:36px 36px 0 0;
    overflow: hidden;
    box-sizing: border-box;  
}
#menu{
    background-color: #F1F7FF;
    padding: 16px;
    min-width: 20vw;
    align-items: center;
}
#menu-content{
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-flow: column wrap;
    flex-grow: 1;
}
ul{
    padding: 0;
    margin: 0;
}
li{
    text-decoration: none;
    list-style: none;
    
}
#content{
    background-color: white;
    flex-grow: 10;
    justify-content: start;
    text-align: left;
    overflow: scroll;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    overflow-x: hidden;
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */

}
#logo-container{
    display: flex;
    flex-flow: no-wrap column;
    justify-content: space-around;
    align-items: center;
}
#logo-container>img{
    width: 30%;   
}
#content > div:first-of-type{
    display: flex;
    justify-content: space-between;
}


.grid-container,.grid-container-project {
    display: grid;
    grid-template-columns: auto auto auto;
    gap: 20px;
    height: 100%;
    padding: 36px;
    width: 100%;
  }
  .grid-container-project {
    grid-template-columns: auto auto;
    grid-template-rows: 0.5fr 1fr;
    gap: 20px;

  }
  .grid-item {
    text-align: center;
    border-radius: 8px;
    border-radius: 2px;
    background-color: plum;
  }
  .grid-item-content{
    display: flex;
    justify-content: space-evenly;
    gap: 24px;
    padding: 30px;
  }
  .grid-item-content>div{
    flex-grow: 1;
    width: 100px;
    padding: 24px;

    background-color: #FFDBA8;
    border-radius: 24px;
  }
  .grid-item-content>div:nth-last-child(1){
    background-color: #94E1E9;
  }
  .grid-item-content>div:nth-of-type(1){
    background-color: #B5D2FF;
  }
  

  .grid-item-block{
    text-align: center;
    height: 100%;
    border-radius: 16px;
    display: flex;
    flex-flow: wrap row;
    gap: 36px;
    align-content: center;
  }

  .grid-item-block>div{
    background-color: rgb(188, 231, 255);
    text-align: center;
    flex-grow: 1;
    padding: 24px;
    border-radius: 16px;
  }
  .grid-item-block>div>*{
    background-color: rgb(188, 231, 255);
   margin: 0;

  }
  .fixed{
    position: sticky;
    flex-grow: 2;
    top: 0px;
    padding: 36px;
    flex-direction: column;
    background-color: white;
    margin-left: 0;
  }
 .fixed>div{
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 0;
    gap: 36px;
    
 }
 .fixed>h2,h4,h3{
    padding: 0;
    margin: 0;
 }

#content::-webkit-scrollbar {
    display: none;
  }
  
 #project-list-label{
    display: flex;
    flex-flow: wrap row;
    align-items: center;
    justify-content: space-between;
 }
 #project-list-label>button{
    margin: 0;
    margin:  16px 0px;
    
 }
 #project-item{
    display: flex;
    border: black 1px solid;
    align-items: center; 
    text-align: center;
    padding: 36px;
    border-radius: 8px;
    text-align: left;
    gap: 36px;

}
#tasks-list{
    background-color:rgb(207, 238, 255);
    display: flex;
    flex-flow: row wrap;
    text-align: left;
    justify-content: space-around;
    gap: 24px;
    padding: 16px;
    margin: 16px;
}

